--- a/index.html
+++ b/index.html
@@ -21,48 +21,53 @@
             <input type="text" id="customerAddress" class="w-full p-2 border rounded mb-4">
         </div>
 
-        <!-- Hidden Form for Submission -->
-        <form id="customerForm" action="https://docs.google.com/forms/d/e/1FAIpQLSeROGq0_vmW-FzZYlgyj3ap42k3ZH7UmmAgFaU3m_fvnfn_YQ/formResponse" method="POST" target="hidden_iframe" onsubmit="submissionSuccess()">
-            <input type="hidden" name="entry.490871581" id="formPhone">
-            <input type="hidden" name="entry.32390502" id="formName">
-            <input type="hidden" name="entry.469776270" id="formAddress">
-            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded w-full">Submit</button>
-        </form>
+        <button onclick="fetchCustomerDetails()" class="bg-blue-500 text-white px-4 py-2 rounded">Check Details</button>
+        <button onclick="submitCustomerDetails()" class="bg-green-500 text-white px-4 py-2 rounded">Submit</button>
 
         <p id="statusMessage" class="mt-4 text-center font-bold"></p>
 
         <button id="proceedButton" onclick="redirectToVeggies()" class="hidden mt-4 bg-green-500 text-white px-4 py-2 rounded w-full">Proceed to Order Veggies</button>
-
-        <!-- Invisible Iframe to Handle Form Submission -->
-        <iframe name="hidden_iframe" style="display:none;" onload="submissionSuccess()"></iframe>
     </div>
 
     <script>
-        function submissionSuccess() {
-            document.getElementById("statusMessage").innerText = "Customer details captured successfully.";
-            document.getElementById("proceedButton").classList.remove("hidden");
+        const customerSheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vT6ScA16RqJQwqQsusoqHTqTmoRfApVDoGiBm92NoIbvLDBkVd9wu_YHIgAiCcZkXjSCZ1fXjwnzv8N/pub?output=csv";
+
+        async function fetchCustomerDetails() {
+            const phone = document.getElementById("customerPhone").value.trim();
+            const response = await fetch(customerSheetURL);
+            const data = await response.text();
+            const rows = data.split("\n").slice(1).map(row => row.split(","));
+
+            const customer = rows.find(row => row[1].trim() === phone);
+
+            if (customer) {
+                document.getElementById("customerName").value = customer[2].trim();
+                document.getElementById("customerAddress").value = customer[3].trim();
+                document.getElementById("statusMessage").innerText = "Customer details found successfully.";
+                document.getElementById("proceedButton").classList.remove("hidden");
+            } else {
+                document.getElementById("statusMessage").innerText = "Customer details not found. Please fill the form below.";
+            }
         }
 
-        document.getElementById("customerForm").addEventListener("submit", function () {
+        function submitCustomerDetails() {
             const phone = document.getElementById("customerPhone").value.trim();
             const name = document.getElementById("customerName").value.trim();
             const address = document.getElementById("customerAddress").value.trim();
 
             if (!phone || !name || !address) {
                 alert("Please fill all fields before submitting.");
-                event.preventDefault(); // Prevent empty submissions
                 return;
             }
 
-            // Populate form fields before submitting
-            document.getElementById("formPhone").value = phone;
-            document.getElementById("formName").value = name;
-            document.getElementById("formAddress").value = address;
-        });
+            document.getElementById("statusMessage").innerText = "Customer details captured successfully.";
+            document.getElementById("proceedButton").classList.remove("hidden");
+        }
 
         function redirectToVeggies() {
             const phone = document.getElementById("customerPhone").value;
-            window.location.href = `order.html?phone=${phone}`;
+            const name = document.getElementById("customerName").value;
+            window.location.href = `order.html?phone=${phone}&name=${name}`;
         }
     </script>
 </body>
